Install delegates for preload Tab.

Cherry picked remaining part from
https://codereview.chromium.org/2759563003

uninstallDelegatesForTab does not exist on the branch and was not
copied.

BUG=707970
NOTRY=true
NOPRESUBMIT=true

Review-Url: https://codereview.chromium.org/2804113005
Cr-Commit-Position: refs/branch-heads/3029@{#635}
Cr-Branched-From: 939b32ee5ba05c396eef3fd992822fcca9a2e262-refs/heads/master@{#454471}